feat : 헬멧코드 주소수정

--- a/public/index.html
+++ b/public/index.html
@@ -19,23 +19,23 @@
   <meta property="og:site_name" content="힐스테이트 용인파크밸리">
   <meta property="og:type" content="website" />
   <meta property="og:description" content="힐스테이트 용인 마크밸리ㅣ☎1533-8848ㅣ선착순분양개시ㅣ분양계약조건완화ㅣ평면ㅣ힐스테이트 용인 마크밸리 분양가ㅣ힐스테이트 용인ㅣ방문예약안내" />
-  <meta property="og:image" content="http://www.animezanmai.com/Main1.png" />
-  <meta property="og:url" content="http://www.animezanmai.com/"> 
+  <meta property="og:image" content="https://www.alwatanyh.com/Main1.png" />
+  <meta property="og:url" content="https://www.alwatanyh.com/"> 
   <meta property="og:locale" content="ko_KR">
 
-  <meta name="naver-site-verification" content="72d73e8b653033031e96badb54e5500b494d1d53" />
-  <meta name="google-site-verification" content="uCafO1gi_F6E_1Ff9LEeYhncehI8yERgnESpXKr5TyA" />
-  
   <!-- Twitter Card Metadata -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="힐스테이트 용인파크밸리" />
   <meta name="twitter:description" content="힐스테이트 용인 마크밸리ㅣ☎1533-8848ㅣ선착순분양개시ㅣ분양계약조건완화ㅣ평면ㅣ힐스테이트 용인 마크밸리 분양가ㅣ힐스테이트 용인ㅣ방문예약안내" />
-  <meta name="twitter:image" content="http://www.animezanmai.com/Main1.png" />
-  <meta name="twitter:url" content="http://www.animezanmai.com/" />
+  <meta name="twitter:image" content="https://www.alwatanyh.com/Main1.png" />
+  <meta name="twitter:url" content="https://www.alwatanyh.com/" />
+
+  <meta name="naver-site-verification" content="adc773268cf3a45ca06811502105247d11943825" />
+  <meta name="google-site-verification" content="h3z27_27b6eCU6pTQ2twbeAofIiZjA2nfWipm7E3j-E" />
 
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.ico" />
-  <link rel="image_src" href="http://www.animezanmai.com/Main1.png" />
+  <link rel="image_src" href="https://www.alwatanyh.com/Main1.png" />
   <link rel="rss" type="application/xml" title="rss" href="/rss.xml" />
   <link rel="sitemap" type="application/xml" title="sitemap" href="/sitemap.xml" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -52,9 +52,9 @@
     "@context": "https://schema.org",
     "@type": "RealEstateAgent",
     "name": "힐스테이트 용인파크밸리",
-    "url": "http://www.animezanmai.com/",
+    "url": "https://www.alwatanyh.com/",
     "description": "힐스테이트 용인파크밸리 아파트의 최신정보 및 모델하우스위치 정보 및 상담 서비스 제공",
-    "logo": "http://www.animezanmai.com/Main1.png",
+    "logo": "https://www.alwatanyh.com/Main1.png",
     "contactPoint": {
       "@type": "ContactPoint",
       "telephone": "+82-1533-8848",
@@ -62,7 +62,7 @@
     },
     "potentialAction": {
       "@type": "SearchAction",
-      "target": "http://www.animezanmai.com/?s={search_term_string}",
+      "target": "https://www.alwatanyh.com/?s={search_term_string}",
       "query-input": "required name=search_term_string"
     }
   }
