--- a/public/index.html
+++ b/public/index.html
@@ -9,25 +9,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta property="title" content="「힐스테이트 용인마크밸리」" />
-  <meta name="description" content="힐스테이트 용인 마크밸리ㅣ☎1533-8848ㅣ선착순개시ㅣ힐스테이트 용인마크밸리 모델하우스ㅣ용인 힐스테이트 마크밸리ㅣ힐스테이트 용인ㅣ방문예약" />
+  <meta property="title" content="힐스테이트 용인마크밸리" />
+  <meta name="description" content="힐스테이트 용인마크밸리ㅣ☎️(대표)1533-8848ㅣ용인힐스테이트마크밸리ㅣ견본주택ㅣ모델하우스ㅣ위치ㅣ청약ㅣ분양ㅣ분양가ㅣ공급정보ㅣ잔여세대문의ㅣ고객센터ㅣ방문예약" />
   <meta name="keywords" content="힐스테이트 용인마크밸리, 힐스테이트용인마크밸리모델하우스, 힐스테이트 용인," />
   <meta name="robots" content="index, follow" />
 
   
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.ico" />
-  <meta property="og:title" content="「힐스테이트 용인마크밸리」" />
+  <meta property="og:title" content="힐스테이트 용인마크밸리" />
   <meta property="og:site_name" content="힐스테이트 용인마크밸리">
   <meta property="og:type" content="website" />
-  <meta property="og:description" content="힐스테이트 용인 마크밸리ㅣ☎1533-8848ㅣ선착순개시ㅣ힐스테이트 용인마크밸리 모델하우스ㅣ용인 힐스테이트 마크밸리ㅣ힐스테이트 용인ㅣ방문예약" />
+  <meta property="og:description" content="힐스테이트 용인마크밸리ㅣ☎️(대표)1533-8848ㅣ용인힐스테이트마크밸리ㅣ견본주택ㅣ모델하우스ㅣ위치ㅣ청약ㅣ분양ㅣ분양가ㅣ공급정보ㅣ잔여세대문의ㅣ고객센터ㅣ방문예약" />
   <meta property="og:image" content="https://www.alwatanyh.com/Main1.png" />
   <meta property="og:url" content="https://www.alwatanyh.com/"> 
   <meta property="og:locale" content="ko_KR">
 
   <!-- Twitter Card Metadata -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="「힐스테이트 용인마크밸리」" />
-  <meta name="twitter:description" content="힐스테이트 용인 마크밸리ㅣ☎1533-8848ㅣ선착순개시ㅣ힐스테이트 용인마크밸리 모델하우스ㅣ용인 힐스테이트 마크밸리ㅣ힐스테이트 용인ㅣ방문예약" />
+  <meta name="twitter:title" content="힐스테이트 용인마크밸리" />
+  <meta name="twitter:description" content="힐스테이트 용인마크밸리ㅣ☎️(대표)1533-8848ㅣ용인힐스테이트마크밸리ㅣ견본주택ㅣ모델하우스ㅣ위치ㅣ청약ㅣ분양ㅣ분양가ㅣ공급정보ㅣ잔여세대문의ㅣ고객센터ㅣ방문예약" />
   <meta name="twitter:image" content="https://www.alwatanyh.com/Main1.png" />
   <meta name="twitter:url" content="https://www.alwatanyh.com/" />
 
@@ -73,10 +73,10 @@
 <body>
 
 
-  <noscript>힐스테이트 용인 마크밸리ㅣ☎1533-8848ㅣ선착순개시ㅣ힐스테이트 용인마크밸리 모델하우스ㅣ용인 힐스테이트 마크밸리ㅣ힐스테이트 용인ㅣ방문예약</noscript>
+  <noscript>힐스테이트 용인마크밸리ㅣ☎️(대표)1533-8848ㅣ용인힐스테이트마크밸리ㅣ견본주택ㅣ모델하우스ㅣ위치ㅣ청약ㅣ분양ㅣ분양가ㅣ공급정보ㅣ잔여세대문의ㅣ고객센터ㅣ방문예약</noscript>
   <div id="root">
   <h1>힐스테이트 용인마크밸리</h1>
-  <p>힐스테이트 용인 마크밸리ㅣ☎1533-8848ㅣ선착순개시ㅣ힐스테이트 용인마크밸리 모델하우스ㅣ용인 힐스테이트 마크밸리ㅣ힐스테이트 용인ㅣ방문예약</p>
+  <p>힐스테이트 용인마크밸리ㅣ☎️(대표)1533-8848ㅣ용인힐스테이트마크밸리ㅣ견본주택ㅣ모델하우스ㅣ위치ㅣ청약ㅣ분양ㅣ분양가ㅣ공급정보ㅣ잔여세대문의ㅣ고객센터ㅣ방문예약</p>
     </div>
   <!--
       This HTML file is a template.
