--- a/public/index.html
+++ b/public/index.html
@@ -140,7 +140,7 @@
       { url: "https://www.sketchs.co.kr/", name: "김포 오퍼스 한강 스위첸" },
       { url: "https://delidilly.co.kr/", name: "평택 화양 신영지웰" },
       { url: "https://locamobility.co.kr/", name: "대전 롯데캐슬 더퍼스트" },
-      { url: "https://eliasart.kr/", name: "평택 브레인시티 아이파크" },
+      { url: "https://eliasart.kr/", name: "평택 브레인시티 푸르지오" },
       { url: "https://intercs.co.kr/", name: "대전 하늘채 루시에르" },
       { url: "https://www.leecols.kr/", name: "브레인시티 메디스파크 로제비앙 모아엘가" },
       { url: "https://layershop.kr/", name: "대전 엘크루 베네치아" },
