--- a/public/index.html
+++ b/public/index.html
@@ -9,25 +9,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta property="title" content="힐스테이트 도안리버파크 모델하우스" />
-  <meta name="description" content="힐스테이트 도안리버파크 모델하우스ㅣ☎️(대표)1533-8848ㅣ도안힐스테이트 모델하우스ㅣ임대ㅣ모델하우스ㅣ위치ㅣ청약ㅣ분양ㅣ분양가ㅣ공급정보ㅣ잔여세대문의ㅣ고객센터ㅣ방문예약" />
-  <meta name="keywords" content="힐스테이트도안리버파크모델하우스, 힐스테이트도안리버파크," />
+  <meta property="title" content="힐스테이트 도안리버파크" />
+  <meta name="description" content="힐스테이트 도안리버파크ㅣ☎️(대표)1533-8848ㅣ도안힐스테이트리버파크ㅣ도안힐스테이트ㅣ임대ㅣ모델하우스ㅣ위치ㅣ청약ㅣ분양ㅣ분양가ㅣ공급정보ㅣ잔여세대문의ㅣ고객센터ㅣ방문예약" />
+  <meta name="keywords" content="힐스테이트도안리버파크, 힐스테이트도안리버파크모델하우스" />
   <meta name="robots" content="index, follow" />
 
   
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.ico" />
-  <meta property="og:title" content="힐스테이트 도안리버파크 모델하우스" />
-  <meta property="og:site_name" content="힐스테이트 도안리버파크 모델하우스">
+  <meta property="og:title" content="힐스테이트 도안리버파크" />
+  <meta property="og:site_name" content="힐스테이트 도안리버파크">
   <meta property="og:type" content="website" />
-  <meta property="og:description" content="힐스테이트 도안리버파크 모델하우스ㅣ☎️(대표)1533-8848ㅣ도안힐스테이트 모델하우스ㅣ임대ㅣ모델하우스ㅣ위치ㅣ청약ㅣ분양ㅣ분양가ㅣ공급정보ㅣ잔여세대문의ㅣ고객센터ㅣ방문예약" />
+  <meta property="og:description" content="힐스테이트 도안리버파크ㅣ☎️(대표)1533-8848ㅣ도안힐스테이트리버파크ㅣ도안힐스테이트ㅣ임대ㅣ모델하우스ㅣ위치ㅣ청약ㅣ분양ㅣ분양가ㅣ공급정보ㅣ잔여세대문의ㅣ고객센터ㅣ방문예약" />
   <meta property="og:image" content="https://www.alwatanyh.com/Main1.png" />
   <meta property="og:url" content="https://www.alwatanyh.com/"> 
   <meta property="og:locale" content="ko_KR">
 
   <!-- Twitter Card Metadata -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="힐스테이트 도안리버파크 모델하우스" />
-  <meta name="twitter:description" content="힐스테이트 도안리버파크 모델하우스ㅣ☎️(대표)1533-8848ㅣ도안힐스테이트 모델하우스ㅣ임대ㅣ모델하우스ㅣ위치ㅣ청약ㅣ분양ㅣ분양가ㅣ공급정보ㅣ잔여세대문의ㅣ고객센터ㅣ방문예약" />
+  <meta name="twitter:title" content="힐스테이트 도안리버파크" />
+  <meta name="twitter:description" content="힐스테이트 도안리버파크ㅣ☎️(대표)1533-8848ㅣ도안힐스테이트리버파크ㅣ도안힐스테이트ㅣ임대ㅣ모델하우스ㅣ위치ㅣ청약ㅣ분양ㅣ분양가ㅣ공급정보ㅣ잔여세대문의ㅣ고객센터ㅣ방문예약" />
   <meta name="twitter:image" content="https://www.alwatanyh.com/Main1.png" />
   <meta name="twitter:url" content="https://www.alwatanyh.com/" />
 
@@ -45,16 +45,16 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Noto+Sans+KR:wght@100..900&family=Roboto:wght@700&display=swap" rel="stylesheet">
 
-  <title>힐스테이트 도안리버파크 모델하우스</title>
+  <title>힐스테이트 도안리버파크</title>
    
   <!-- Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "RealEstateAgent",
-    "name": "힐스테이트 도안리버파크 모델하우스",
+    "name": "힐스테이트 도안리버파크",
     "url": "https://www.alwatanyh.com/",
-    "description": "힐스테이트 도안리버파크 모델하우스 아파트의 최신정보 및 모델하우스위치 정보 및 상담 서비스 제공",
+    "description": "힐스테이트 도안리버파크 아파트의 최신정보 및 모델하우스위치 정보 및 상담 서비스 제공",
     "logo": "https://www.alwatanyh.com/Main1.png",
     "contactPoint": {
       "@type": "ContactPoint",
@@ -73,10 +73,10 @@
 <body>
 
 
-  <noscript>힐스테이트 도안리버파크 모델하우스ㅣ☎️(대표)1533-8848ㅣ도안힐스테이트 모델하우스ㅣ임대ㅣ모델하우스ㅣ위치ㅣ청약ㅣ분양ㅣ분양가ㅣ공급정보ㅣ잔여세대문의ㅣ고객센터ㅣ방문예약</noscript>
+  <noscript>힐스테이트 도안리버파크ㅣ☎️(대표)1533-8848ㅣ도안힐스테이트리버파크ㅣ도안힐스테이트ㅣ임대ㅣ모델하우스ㅣ위치ㅣ청약ㅣ분양ㅣ분양가ㅣ공급정보ㅣ잔여세대문의ㅣ고객센터ㅣ방문예약</noscript>
   <div id="root">
-  <h1>힐스테이트 도안리버파크 모델하우스</h1>
-  <p>힐스테이트 도안리버파크 모델하우스ㅣ☎️(대표)1533-8848ㅣ도안힐스테이트 모델하우스ㅣ임대ㅣ모델하우스ㅣ위치ㅣ청약ㅣ분양ㅣ분양가ㅣ공급정보ㅣ잔여세대문의ㅣ고객센터ㅣ방문예약</p>
+  <h1>힐스테이트 도안리버파크</h1>
+  <p>힐스테이트 도안리버파크ㅣ☎️(대표)1533-8848ㅣ도안힐스테이트리버파크ㅣ도안힐스테이트ㅣ임대ㅣ모델하우스ㅣ위치ㅣ청약ㅣ분양ㅣ분양가ㅣ공급정보ㅣ잔여세대문의ㅣ고객센터ㅣ방문예약</p>
     </div>
     <!-- ====== FAMILY SITE 백링크 영역 시작 ====== -->
   <footer style="background:#292929; color:#fff; padding:1px 0 2px 0; text-align:center;">
@@ -129,11 +129,11 @@
   <script>
     // 사이트 리스트
     const sites = [
-    // { url: "https://www.beyinegzersizi.com", name: "용인아이파크 원클러스터 2단지" },
+    // { url: "https://www.beyinegzersizi.com", name: "도안아이파크 원클러스터 2단지" },
     //   { url: "https://www.cssdesign.kr", name: "둔산 해링턴 플레이스" },
     //   { url: "https://www.abcya4.com", name: "원종 휴먼빌 클라츠" },
     //   { url: "https://www.vaaclubs.com", name: "신분평 더웨이시티" },
-      { url: "https://www.alwatanyh.com", name: "힐스테이트 도안리버파크 모델하우스" },
+      { url: "https://www.alwatanyh.com", name: "힐스테이트 도안리버파크" },
       // { url: "https://www.verficktescheisse.com", name: "평택 화양 동문디이스트" },
       // { url: "https://www.daincounseling.co.kr", name: "회천중앙역 로제비앙" },
       // { url: "https://niceoi.kr", name: "브레인시티 앤네이처 미래도" },
