feat : 사이트맵수정

--- a/public/index.html
+++ b/public/index.html
@@ -151,7 +151,7 @@
       // { url: "https://www.theporest.co.kr/", name: "펜타시티 한신더휴" },
       // { url: "https://www.ifors2020.kr/", name: "학산 한신더휴" },
       // { url: "https://www.dwbsongs.com/", name: "힐스테이트 둔산" },
-      // { url: "https://www.apay.co.kr/", name: "힐스테이 도안리버파크" },
+      // { url: "https://www.alwatanyh.com/", name: "힐스테이 도안리버파크" },
     ];
     // 배열 랜덤 섞기
     function shuffle(array) {
